refactor: improve something